apps/rsshub/base/rsshub-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rsshub
  namespace: rsshub
  labels:
    app.kubernetes.io/name: rsshub
    app.kubernetes.io/instance: rsshub
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app.kubernetes.io/name: rsshub
      app.kubernetes.io/instance: rsshub
  template:
    metadata:
      labels:
        app.kubernetes.io/name: rsshub
        app.kubernetes.io/instance: rsshub
    spec:
      containers:
        - name: rsshub
          image: diygod/rsshub:chromium-bundled
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 1200
              protocol: TCP
          startupProbe:
            httpGet:
              path: /
              port: http
              scheme: HTTP
            initialDelaySeconds: 45
            periodSeconds: 10
            timeoutSeconds: 10
            failureThreshold: 18
          livenessProbe:
            httpGet:
              path: /
              port: http
              scheme: HTTP
            initialDelaySeconds: 0
            periodSeconds: 30
            timeoutSeconds: 10
            successThreshold: 1
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /
              port: http
              scheme: HTTP
            initialDelaySeconds: 0
            periodSeconds: 10
            timeoutSeconds: 10
            successThreshold: 1
            failureThreshold: 3
          resources:
            requests:
              cpu: 200m
              memory: 512Mi
            limits:
              cpu: 1000m
              memory: 1Gi
