apps/rsshub/base/rsshub-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rsshub
  namespace: rsshub
  labels:
    app.kubernetes.io/name: rsshub
    app.kubernetes.io/instance: rsshub
spec:
  selector:
    app.kubernetes.io/name: rsshub
    app.kubernetes.io/instance: rsshub
  ports:
    - port: 1200
      targetPort: 1200
      name: http
      protocol: TCP
  type: ClusterIP
