apps/rsshub/base/tailscale-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rsshub-ingress
  namespace: rsshub
  annotations:
    tailscale.com/hostname: rsshub
  labels:
    app.kubernetes.io/name: rsshub
    app.kubernetes.io/instance: rsshub
spec:
  ingressClassName: tailscale
  tls:
    - hosts:
        - rsshub
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: rsshub
                port:
                  number: 1200
